--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 ]
 
 dependencies = [
-  "dvc[s3,ssh]>=3.63.0",
+  "dvc[s3,ssh]>=3.63",
   "einx>=0.3",
   "hydra-core~=1.3.2",
   "hydra-zen~=0.10.0",
@@ -52,3 +52,6 @@ dev = [
 
 [tool.uv.sources]
 torchcrepe = { git = "https://github.com/kureta/torchcrepe.git" }
+
+[tool.marimo.runtime]
+watcher_on_save = "autorun"
